src/styles/toolbox.module.css
.toolbox {
    position: fixed;
    bottom: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.toolbox.footer-spacing {
    bottom: 5em;
}

.toolbox-item-container {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.toolbox-item {
    margin-right: 1em;
    padding: 1em;
    backdrop-filter: blur(10px);
    border-radius: 24px;

    color: white;
    text-transform: uppercase;
    font-weight: 800;
    letter-spacing: 3px;
}

.toolbox-item:hover {
    color: var(--brand-orange);
}

.toolbox-button {
    background: none;
    backdrop-filter: blur(10px);
    border-radius: 36px;
    border: none;
    margin:  1em 1em 1em 0;
    width: 60px;
    height: 60px;
}

.toolbox-icon {
    width: auto;
    height: auto;
    fill: white;
}

.toolbox-icon:hover {
    scale: 1.08;
}

.toolbox-closed-icon {
    width: 60%;
    height: 60%;
    fill: white;
}

.toolbox-closed-icon:hover {
    scale: 1.08;
}

